fix bug with invisible text in form, and dark mode

--- a/static/css/bootstrap-styles/forms.css
+++ b/static/css/bootstrap-styles/forms.css
@@ -160,13 +160,13 @@ select {
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5rem;
-    color: white;
     background-color: transparent;
     background-clip: padding-box;
     border: 1px solid #d2d6da;
     appearance: none;
     border-radius: 0.375rem;
     transition: 0.2s ease;
+    color: cornflowerblue;
 }
 
 form .aligned table p {
